--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 // linuxcw プロジェクト //
+// 2012/11/30 masashi shimakura 
 
 linuxcw のパッケージはUNIX環境でモールス信号を学習する為の小道具を集めたものです。
 UNIX環境用の物は他にも優れたものがあるようですが、私自身の勉強の為に書いてます。
