--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2013-01-19  Tsuyoshi ICHIKAWA  <ace@momiage.org>
 
+	* libcw/cw_sign.c (cw_sign):
+	delete char_replace().replace to tolower().
+
 	* libcw: cleaning
 
